# andisbank-grpc

./: Cargo.toml  README.md  build.rs
proto/: loan.proto
src/: client.rs  server.rs
src/models/: loan.rs  mod.rs  payment.rs  user.rs
