[package]
name = "andisbank-grpc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tonic = "0.12.2"
prost = "0.13.2"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.210", features = ["derive"] }
tracing-subscriber = "0.3.18"
tonic-web = "0.12.2"
tower = "0.5.1"
hyper-util = "0.1.8"

[build-dependencies]
tonic-build = "0.12"